--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -1,177 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ScrollView
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".MainActivity">
+    <EditText
+        android:id="@+id/name"
+        android:background="#917979"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
+        android:hint="votre nom"
+        android:textColorHint="@color/black"
+        android:textSize="20sp"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        />
+    <EditText
+        android:id="@+id/passeword"
+        android:background="#917979"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="votre mot de passe"
+        android:textColorHint="@color/black"
+        android:textSize="20sp"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Valider"
+        android:textSize="20dp"
+        android:background="@color/teal_200"
+        android:id="@+id/valider_btn"
+        />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_centerHorizontal="true"
-                android:elevation="9dp"
-                android:src="@drawable/sigin_boy_img"
-                app:civ_border_color="@color/colorAccent"
-                app:civ_border_width="3dp" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="63dp"
-                android:elevation="0dp"
-                app:cardElevation="8dp"
-                app:cardCornerRadius="4dp"
-                app:cardUseCompatPadding="true">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:id="@+id/linearLayout1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="100">
-
-                        <TextView
-                            android:id="@+id/signin"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:background="@color/colorAccent"
-                            android:paddingBottom="12dp"
-                            android:paddingTop="12dp"
-                            android:text="SignIn"
-                            android:textAlignment="center"
-                            android:textColor="#FFFFFF"
-                            android:textSize="16dp"
-                            android:textStyle="bold"
-                            android:layout_gravity="center_horizontal" />
-
-                        <TextView
-                            android:id="@+id/signup"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:background="@drawable/bordershape"
-                            android:paddingBottom="12dp"
-                            android:paddingTop="12dp"
-                            android:text="SignUp"
-                            android:textAlignment="center"
-                            android:textColor="@color/colorAccent"
-                            android:textSize="16dp"
-                            android:textStyle="bold"
-                            android:gravity="center_horizontal" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/linearLayout2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/linearLayout1"
-                        android:orientation="vertical"
-                        android:padding="16dp">
-
-                        <TextView
-                            android:id="@+id/signin_signup_txt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Sign in"
-                            android:textAlignment="center"
-                            android:textColor="#000000"
-                            android:textSize="24dp"
-                            android:textStyle="bold"
-                            android:gravity="center_horizontal" />
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp">
-
-                            <EditText
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:drawablePadding="16dp"
-                                android:drawableStart="@drawable/ic_email_light_blue_24dp"
-                                android:hint="Email"
-                                android:inputType="textEmailAddress"
-                                android:maxLines="1"
-                                android:textColor="@android:color/black"
-                                android:textSize="16sp"
-                                android:drawableLeft="@drawable/ic_email_light_blue_24dp" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            app:passwordToggleEnabled="true">
-
-                            <EditText
-                                android:id="@+id/password"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:drawablePadding="16dp"
-                                android:drawableStart="@drawable/ic_lock_light_blue_24dp"
-                                android:hint="Password"
-                                android:inputType="textPassword"
-                                android:maxLines="1"
-                                android:textColor="@android:color/black"
-                                android:textSize="16sp"
-                                android:drawableLeft="@drawable/ic_lock_light_blue_24dp" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                        <Button
-                            android:id="@+id/signin_signup_btn"
-                            android:layout_width="210dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginBottom="16dp"
-                            android:layout_marginTop="24dp"
-                            android:background="@drawable/buttonshape"
-                            android:drawableLeft="@drawable/ic_touch_app_white_24dp"
-                            android:drawableStart="@drawable/ic_touch_app_white_24dp"
-                            android:paddingLeft="16dp"
-                            android:paddingRight="16dp"
-                            android:text="Sign In"
-                            android:textAllCaps="false"
-                            android:textColor="#fff"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/forgot_password"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="32dp"
-                            android:text="Forgot your password?"
-                            android:textAlignment="center"
-                            android:textColor="#4f4f4f"
-                            android:textSize="16sp"
-                            android:textStyle="bold"
-                            android:gravity="center_horizontal" />
-
-                    </LinearLayout>
-
-                </RelativeLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        </RelativeLayout>
-
-    </ScrollView>
-
-</RelativeLayout>
+</LinearLayout>
