--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@ tools:context=".MainActivity">
 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/emailLayout"
     android:layout_width="match_parent"
+    android:padding="15dp"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="350dp"
@@ -51,21 +52,24 @@ tools:context=".MainActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Type Your Password"
+        android:padding="15dp"
         android:inputType="textPassword" />
 </com.google.android.material.textfield.TextInputLayout>
 
-<androidx.appcompat.widget.AppCompatButton
+<Button
     android:id="@+id/button"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:background="@color/yellow"
     android:text="Sign In"
+    android:padding="15dp"
     android:textColor="@color/black"
     android:textStyle="bold"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
+    android:textSize="20dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />
 
